--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#"><img style="width: 20px; height: 20px;" src="images/home.png"/></a></li>
           <li><a ng-href="#/about"><img style="width: 20px; height: 20px;" src="images/settings.png"/></a></li>
-          <li><a ng-href="#">Contact</a></li>
+          <!--<li><a ng-href="#">Contact</a></li>-->
         </ul>
         <h3 class="text-muted">Shaiba generator!</h3>
       </div>
