--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/directives/aboutdir.js"></script>
+        <script src="scripts/services/parse.js"></script>
         <!-- endbuild -->
 </body>
 </html>
