--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/directives/aboutdir.js"></script>
         <script src="scripts/services/parse.js"></script>
+        <script src="scripts/services/datamanager.js"></script>
         <!-- endbuild -->
 </body>
 </html>
