--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,7 @@
         <script src="scripts/directives/aboutdir.js"></script>
         <script src="scripts/services/parse.js"></script>
         <script src="scripts/services/datamanager.js"></script>
+        <script src="scripts/directives/onkeyup.js"></script>
         <!-- endbuild -->
 </body>
 </html>
