--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
         <script src="scripts/services/datamanager.js"></script>
         <script src="scripts/directives/onkeyup.js"></script>
         <script src="scripts/controllers/hall.js"></script>
+        <script src="scripts/services/appalert.js"></script>
         <!-- endbuild -->
 </body>
 </html>
