alertService Added, about.js

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,9 @@
       <div ng-view=""></div>
 
       <div class="footer">
+          <div>
+              <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alert.close()">{{ alert.msg }}</alert>
+          </div>
         <p><span class="glyphicon glyphicon-heart"></span> from the Consumer team.</p>
       </div>
     </div>
@@ -69,6 +72,9 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="bower_components/angular-ui-sortable/sortable.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
