--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/animation.css"/>
     <!-- endbuild -->
   </head>
   <body ng-app="shaibaApp" ng-cloak="">
@@ -33,7 +34,7 @@
           <button ng-controller="MainCtrl" ng-click="logoutFacebook()">logout</button>
       </div>
 
-      <div ng-view=""></div>
+      <div ng-view="" class="slide"></div>
 
       <div class="footer">
           <div>
