All is good man

--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,7 @@
         <script src="scripts/directives/autocomplete.js"></script>
         <script src="scripts/controllers/index.js"></script>
         <script src="scripts/services/title.js"></script>
+        <script src="scripts/directives/favstar.js"></script>
         <!-- endbuild -->
 </body>
 </html>
