--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+      <link rel="icon" href="http://localhost:9000/images/fav.ico" type="image/x-icon">
+      <link rel="shortcut icon" type="images/x-icon" href="img/fav.ico" />
+      <link type="image/x-icon" href="images/fav.ico" />
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -30,9 +33,9 @@
           <img ng-show="showFbLogin" src="images/fblogin.png" ng-click="loginFacebook()" class="fbbutton"/>
           </div>
         <ul class="nav nav-pills pull-right">
-          <li><a ng-href="#/"><span class="glyphicon glyphicon-home"/></a></li>
-          <li><a ng-href="#/about"><span class="glyphicon glyphicon-cog"/></a></li>
-          <li><a ng-href="#/halloffame"><span class="glyphicon glyphicon-star"/></a></li>
+          <li><a ng-href="#/"><span class="glyphicon glyphicon-home  nav-custom"/></a></li>
+          <li><a ng-href="#/about"><span class="glyphicon glyphicon-cog  nav-custom"/></a></li>
+          <li><a ng-href="#/halloffame"><span class="glyphicon glyphicon-star  nav-custom"/></a></li>
         </ul>
       </div>
 
