new factory name SharedData to hold all of our constants, maybe i should change its name. for now it holds few constants for the validation states. and the about.js function checkValidation use it. plus it alerts the way it should right now.

--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,7 @@
         <script src="scripts/controllers/index.js"></script>
         <script src="scripts/services/title.js"></script>
         <script src="scripts/directives/favstar.js"></script>
+        <script src="scripts/services/shareddata.js"></script>
         <!-- endbuild -->
 </body>
 </html>
