--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" ng-app="shaibaApp" ng-cloak="" ng-controller="IndexCtrl">
+<html class="no-js" ng-app="shaibaApp" ng-cloak ng-strict-di ng-controller="IndexCtrl">
   <head>
     <meta charset="utf-8">
     <title ng-bind="Title.getTitle()"></title>
@@ -16,7 +16,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.css"/>
     <link rel="stylesheet" href="styles/animation.css"/>
     <!-- endbuild -->
   </head>
