--- a/app/index.html
+++ b/app/index.html
@@ -48,13 +48,13 @@
 
       <div ng-view="" class="slide"></div>
 
-     <!--<div class="footer">
+     <div class="footer">
           <div style="height: 50px;">
               <alert ng-repeat="alert in alerts" type="{{ alert.type }}" close="alert.close()" style="direction: RTL">
               <strong>{{ alert.msg }}</strong>
               </alert>
           </div>
-        <p><span class="glyphicon glyphicon-heart"></span> from the Consumer team.</p>
+        <!--<p><span class="glyphicon glyphicon-heart"></span> from the Consumer team.</p>
      </div>
     </div>-->
 
