gmail image added

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
 
       <div ng-view="" class="slide"></div>
 
-     <div class="footer">
+     <div class="footer no-top-border">
           <div style="height: 50px;">
               <alert ng-repeat="alert in alerts" type="{{ alert.type }}" close="alert.close()" style="direction: RTL">
               <strong>{{ alert.msg }}</strong>
