--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
           </div>
         <!--<p><span class="glyphicon glyphicon-heart"></span> from the Consumer team.</p>
      </div>
-    </div>-->
+    </div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -95,6 +95,7 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/ng-facebook/ngFacebook.js"></script>
     <script src="bower_components/ngprogress/build/ngProgress.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
